--- a/lnbCont_04.html
+++ b/lnbCont_04.html
@@ -22,7 +22,7 @@
 		<li>
 			<span class="rdchBox block">
 				<input type="checkbox" id="mulgun3" name="" />
-				<label for="mulgun3" class="labelCh"><em class="text">등록매물</em> [<i class="icon"></i>]</label>
+				<label for="mulgun3" class="labelCh"><em class="text">등록매물</em> [<i class="icon"><img src="img/marker/deunglog.png"></i>]</label>
 			</span>
 		</li>
 		<li>
