--- a/z_z_index.html
+++ b/z_z_index.html
@@ -64,7 +64,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 
 
 	<li class="" style="margin:0 0px 0 30px; background:#f1f1f1;"><a href="#" class="inc_30" name="inc_30">css, js<span class="new">N</span></a></li>
-	<li class="" style="background:#f1f1f1;"><a href="#" class="inc_32" name="inc_31">이미지<span class="new">N</span></a></li>
+	<li class="" style="background:#f1f1f1;"><a href="#" class="inc_31" name="inc_31">이미지<span class="new">N</span></a></li>
 </ul>
 <div id="inc_99" class="codeList" style="">
 	<ul>
@@ -81,8 +81,8 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>기본 레이아웃</span>
 			<span class="link">index.html</span>
 			<span class="ex">기본 레이아웃 디자인</span>
-			<span class="end">완성</span>
-			<span class="date">2018.01.18</span>
+			<span class="end">수정</span>
+			<span class="date">2018.02.08</span>
 			<span class="etc"></span>
 		</li>
 
@@ -109,6 +109,15 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="ex">modal 샘플</span>
 			<span class="end">완성</span>
 			<span class="date">2018.01.18</span>
+			<span class="etc"></span>
+		</li>
+
+		<li>
+			<span>아이콘폰트</span>
+			<span class="link" data-type="modal" data-width="full">z_iconfont.html</span>
+			<span class="ex">아이콘폰트</span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.05</span>
 			<span class="etc"></span>
 		</li>
 	</ul>
@@ -142,6 +151,8 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="date">2018.01.18</span>
 			<span class="etc"></span>
 		</li>
+
+
 	</ul>
 </div>
 
@@ -233,6 +244,15 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="etc"></span>
 		</li>
 
+		<li>
+			<span>주소검색 > 매물등록</span>
+			<span class="link" data-type="modal" data-width="500">10_05_cateMaemul.html</span>
+			<span class="ex">매물등록</span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.08</span>
+			<span class="etc"></span>
+		</li>
+
 
 	</ul>
 </div>
@@ -253,7 +273,31 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>좌메뉴 투자유망 지역검색</span>
 			<span class="link" data-type="inc">lnbCont_02.html</span>
 			<span class="ex">좌메뉴 투자유망 지역검색 - index.html에 inculde되는 좌메뉴</span>
-			<span class="end"></span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.07</span>
+			<span class="etc"></span>
+		</li>
+		<li>
+			<span>좌메뉴 투자유망 지역검색 > 장기미집행도시계획시설물건조건</span>
+			<span class="link" data-type="inc">20_01_dvTooja_tab01.html</span>
+			<span class="ex">tab - 장기미집행도시계획시설물건조건</span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.07</span>
+			<span class="etc"></span>
+		</li>
+		<li>
+			<span>좌메뉴 투자유망 지역검색 > 토지이용규제 해소물건</span>
+			<span class="link" data-type="inc">20_01_dvTooja_tab02.html</span>
+			<span class="ex">tab - 토지이용규제 해소물건</span>
+			<span class="end">미완성</span>
+			<span class="date"></span>
+			<span class="etc"></span>
+		</li>
+		<li>
+			<span>좌메뉴 투자유망 지역검색 > 개발적성 필지 검색</span>
+			<span class="link" data-type="inc">20_01_dvTooja_tab03.html</span>
+			<span class="ex">tab - 개발적성 필지 검색</span>
+			<span class="end">미완성</span>
 			<span class="date"></span>
 			<span class="etc"></span>
 		</li>
@@ -299,8 +343,8 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>좌메뉴 물건보기</span>
 			<span class="link" data-type="inc">lnbCont_04.html</span>
 			<span class="ex">좌메뉴 물건보기 - index.html에 inculde되는 좌메뉴</span>
-			<span class="end"></span>
-			<span class="date"></span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.06</span>
 			<span class="etc"></span>
 		</li>
 	</ul>
@@ -418,8 +462,8 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>css파일 <strong>●</strong> </span>
 			<span class="link">../css/map.css</span>
 			<span class="ex">실제 컨텐츠를 제어하는 css<br/> 실제 모습을 재정의의 가장 많이 수정되는 파일</span>
-			<span class="end">완성</span>
-			<span class="date">2018.02.06</span>
+			<span class="end">수정</span>
+			<span class="date">2018.02.08</span>
 			<span class="etc"></span>
 		</li>
 		
@@ -430,8 +474,8 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>js파일 </span>
 			<span class="link">../js/main.js</span>
 			<span class="ex">실제 컨텐츠를 제어하는 js<br/> 실제 모습을 재정의의 가장 많이 수정되는 파일</span>
-			<span class="end">완성</span>
-			<span class="date">2018.01.18</span>
+			<span class="end">수정</span>
+			<span class="date">2018.02.08</span>
 			<span class="etc"></span>
 		</li>
 	</ul>
@@ -455,7 +499,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link">../img/이하모두</span>
 			<span class="ex"></span>
 			<span class="end"></span>
-			<span class="date">2018.01.18</span>
+			<span class="date">2018.02.08</span>
 			<span class="etc"></span>
 		</li>
 	</ul>
@@ -527,7 +571,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 					'color':'#fff',
 					'font-weight':'bold'
 				});
-			} else if (text == '미완성 / 2차오픈') {
+			} else if (text == '수정') {
 				$(this).css( {
 					'background':'orange',
 					'color':'#fff',
@@ -538,7 +582,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 
 		$('.codeList li span.date').each(function() {
 			var text = $(this).text();
-			if (text == '2018.02.06') {
+			if (text == '2018.02.08') {
 				$(this).css( {
 					'background':'black',
 					'color':'#fff',
@@ -552,7 +596,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 		$('span.new').removeClass('open');
 		$('.codeList span.date').each(function() {
 			var text = $(this).text();			
-			if (text == '2018.02.06') {
+			if (text == '2018.02.08') {
 				var parents = $(this).parents('.codeList').attr('id');				
 				$('.' + parents).find('span.new').addClass('open');
 				return;
