--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 <script type="text/javascript" src="bootstrap/bootstrap.min.js" ></script>
 <script type="text/javascript" src="vendors/jQRangeSlider-5.7.2/jQAllRangeSliders-min.js"></script>
 <script type="text/javascript" src="vendors/tabulator/js/tabulator.min.js"></script>
+
+<!-- uploadify -->
+<script type="text/javascript" src="vendors/jQuery-Upload-File/4.0.11/jquery.uploadfile.js"></script>
+
 <script type="text/javascript" src="js/main.js"></script>
 
 <script type="text/javascript">
@@ -54,10 +58,7 @@ $(document).ready( function() {
 		alertPopup('00_01_alert.html', '', '');
 	});
 
-
-
-
-
+	/////////////////////////////////////////////////
 	//Modal 레이어팝업 오픈이벤트 이후
 	$('#modalPopup').on('shown.bs.modal', function() {
 		setModalMaxHeight($('#modalPopup'));
@@ -98,10 +99,23 @@ $(document).ready( function() {
 		}
 	});
 
+	
+	//bootstrap tab 이벤트 이후
+	$('a[data-toggle="tab"], button[data-toggle="tab"]').on('shown.bs.tab', function() {
+		var target = $(this).attr('href'); //
+		rangeSliderResize(target); // rangeSlider Resize 스크립트
+	});
 
 
+	/////////////////////////////////////////////////
+	slideToggleShow();
+	
+	
+ 
 
 	
+	//////////////////////////////////////////////////
+	//////////////////////////////////////////////////	
 	//modal 레이어 팝업 샘플
 	$('#modalTest').on('click', function(e) {	
 		var param = new Object();
@@ -109,26 +123,28 @@ $(document).ready( function() {
 		commonPopup('z_modalTest_full.html', '', 'full');
 	});
 
-	//로그인 modal
+	//로그인 modal 샘플
 	$('#loginBtn').on('click', function(e) {
-
 		var param = new Object();
 		//commonPopup('url', 'param', 'width');
 		commonPopup('01_01_login.html', '', '410'); //로그인 페이지는 항상 width가 410
 	});
 
-	//로그아웃 버튼
+	//로그아웃 버튼 샘플
 	$('#logoutBtn').on('click', function(e) {		
 		logoutAction();
 	});
-	
 
 });
 
+
+/////////////////////////////////////////////////
+/////////////////////////////////////////////////
 var loginAction = function() {
 	$('#loginBtn').hide();
 	$('#logoutBtn').show();
 }
+
 var logoutAction = function() {
 	var conf = confirm('로그아웃 하시겠습니까?');
 
@@ -140,6 +156,62 @@ var logoutAction = function() {
 		return;
 	}
 }
+
+// slideToggle click 이벤트처리
+var slideToggleShow = function() {
+	$('button[data-role="slideShow"], a[data-role="slideShow"]').on('click', function() {
+		var target = $(this).attr('href');
+		
+		if($(this).hasClass('stateOn')){
+			$(this).removeClass('stateOn');
+			$(target).slideUp(100);
+		} else {
+			$(this).addClass('stateOn');
+			$(target).slideDown(100);
+
+			rangeSliderResize(target); // rangeSlider Resize 스크립트
+		}
+	});
+}
+
+// rangeSliderResize 스크립트
+var rangeSliderResize = function(target) {
+	var tId = target;
+	var length = $(tId).find('.rangeSlider').length;
+   
+	if (!length == '0')
+	{
+		//alert(length + tId);
+		$(tId).find('.rangeSlider').each(function(index) {
+			var id = $(this).attr('id');
+			$('#' + id).rangeSlider('resize');
+		});
+	}
+}
+
+/////////////////////////////////////////////////
+/////////////////////////////////////////////////
+// input[type=checkbox] ,  input[type=radio] 의 label과 id, for를 일이리 맞추기 귀찮아서 만든 스크립트
+// 실제 개발시에는 사용여부를 재확인하세요 
+// id를 자동 생성하므로 원하는 id로 수정 않될수 있음
+var rdchBoxSetId = function(tId, name) {
+	var tId = tId;
+	var name = name;
+	
+	$('#' + tId + ' .rdchBox').each(function(index, element) {
+		if ($(this).has('input[type=checkbox]'))
+		{
+			$(this).find('input[type=checkbox]').attr('id', name + index);
+		} 
+		else if ($(this).has('input[type=radio]'))
+		{
+			$(this).find('input[type=radio]').attr('id', name + index);
+		}
+		$(this).find('label.labelCh').attr('for', name + index);		
+	});
+}
+/////////////////////////////////////////////////
+/////////////////////////////////////////////////
 
 </script>
 
@@ -189,7 +261,7 @@ var logoutAction = function() {
 		<button type="button" class="menuToogle"><span class="hidden">메뉴열기/닫기</span></button>
 
 		<ul id="memuList" class="memuList">
-			<li class="active">
+			<li>
 				<a href="#" id="alertTest" class="menu01" data-name="menuCont01"><i class="icon"></i><span>주소 검색</span></a>
 			</li>
 			<li>
@@ -214,7 +286,7 @@ var logoutAction = function() {
 			<!--#include virtual="lnbCont_01.html" -->
 		</div>
 
-		<div id="menuCont02" class="lnbContWrap">
+		<div id="menuCont02" class="lnbContWrap" style="display:; width:600px;">
 			<!-- ssi(Server Side Includes) 가 설정된 웹서버에서만 실행됨// 필요한 방식으로 호출하삼 -->
 			<!--#include virtual="lnbCont_02.html" -->
 		</div>
