--- a/20_01_dvTooja_tab03.html
+++ b/20_01_dvTooja_tab03.html
@@ -1,1 +1,13 @@
-작업중
+
+<!-- /////////////////////////////// -->
+<!-- 검색영역 -->
+<div class="searchArea">
+	개발쪽에서 바로 진행함
+</div>
+
+<!-- /////////////////////////////// -->
+<!-- 검색영역 -->
+<div class="searchResultArea">
+	검색결과 영역<br/>
+	개발쪽에서 바로 진행함
+</div>
