--- a/z_z_index.html
+++ b/z_z_index.html
@@ -82,7 +82,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link">index.html</span>
 			<span class="ex">기본 레이아웃 디자인</span>
 			<span class="end">수정</span>
-			<span class="date">2018.02.08</span>
+			<span class="date">2018.02.09</span>
 			<span class="etc"></span>
 		</li>
 
@@ -273,33 +273,33 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>좌메뉴 투자유망 지역검색</span>
 			<span class="link" data-type="inc">lnbCont_02.html</span>
 			<span class="ex">좌메뉴 투자유망 지역검색 - index.html에 inculde되는 좌메뉴</span>
-			<span class="end">완성</span>
-			<span class="date">2018.02.07</span>
+			<span class="end">수정</span>
+			<span class="date">2018.02.09</span>
 			<span class="etc"></span>
 		</li>
 		<li>
 			<span>좌메뉴 투자유망 지역검색 > 장기미집행도시계획시설물건조건</span>
 			<span class="link" data-type="inc">20_01_dvTooja_tab01.html</span>
 			<span class="ex">tab - 장기미집행도시계획시설물건조건</span>
-			<span class="end">완성</span>
-			<span class="date">2018.02.07</span>
+			<span class="end">수정</span>
+			<span class="date">2018.02.09</span>
 			<span class="etc"></span>
 		</li>
 		<li>
 			<span>좌메뉴 투자유망 지역검색 > 토지이용규제 해소물건</span>
 			<span class="link" data-type="inc">20_01_dvTooja_tab02.html</span>
 			<span class="ex">tab - 토지이용규제 해소물건</span>
-			<span class="end">미완성</span>
+			<span class="end">완료</span>
 			<span class="date"></span>
-			<span class="etc"></span>
+			<span class="etc">개발로 바로진행</span>
 		</li>
 		<li>
 			<span>좌메뉴 투자유망 지역검색 > 개발적성 필지 검색</span>
 			<span class="link" data-type="inc">20_01_dvTooja_tab03.html</span>
 			<span class="ex">tab - 개발적성 필지 검색</span>
-			<span class="end">미완성</span>
+			<span class="end">완료</span>
 			<span class="date"></span>
-			<span class="etc"></span>
+			<span class="etc">개발로 바로진행</span>
 		</li>
 	</ul>
 </div>
@@ -463,7 +463,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link">../css/map.css</span>
 			<span class="ex">실제 컨텐츠를 제어하는 css<br/> 실제 모습을 재정의의 가장 많이 수정되는 파일</span>
 			<span class="end">수정</span>
-			<span class="date">2018.02.08</span>
+			<span class="date">2018.02.09</span>
 			<span class="etc"></span>
 		</li>
 		
@@ -475,7 +475,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link">../js/main.js</span>
 			<span class="ex">실제 컨텐츠를 제어하는 js<br/> 실제 모습을 재정의의 가장 많이 수정되는 파일</span>
 			<span class="end">수정</span>
-			<span class="date">2018.02.08</span>
+			<span class="date">2018.02.09</span>
 			<span class="etc"></span>
 		</li>
 	</ul>
@@ -582,7 +582,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 
 		$('.codeList li span.date').each(function() {
 			var text = $(this).text();
-			if (text == '2018.02.08') {
+			if (text == '2018.02.09') {
 				$(this).css( {
 					'background':'black',
 					'color':'#fff',
@@ -596,7 +596,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 		$('span.new').removeClass('open');
 		$('.codeList span.date').each(function() {
 			var text = $(this).text();			
-			if (text == '2018.02.08') {
+			if (text == '2018.02.09') {
 				var parents = $(this).parents('.codeList').attr('id');				
 				$('.' + parents).find('span.new').addClass('open');
 				return;
